--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -18,7 +18,7 @@ services:
     app:
         depends_on:
             - db
-        image: ghcr.io/aplotor/expanse:latest
+        image: expanse-oauth-fix-v1
         working_dir: /app/
         volumes:
             - backups:/app/backend/backups/
